# hot_ants

./: .gitignore  CMakeLists.txt  ant.h  flake.nix  main.cpp  simulation.h  utils.h  visualizer.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0jcav28i8zrpdjp9mdx137mzvs7kyw3w-source  q5dv74wp42r544rcmf5x63pm6gyxdhlz-source
include/simulation/: config.hpp  simulation.hpp
include/simulation/ant/: ant.hpp  ant_mode.hpp
include/simulation/colony/: colony.hpp
water_ants/: CMakeLists.txt  main.cpp  simulation.h
